@@ -172,6 +172,7 @@ private:
   BOOL mMovedScreen;
   BOOL mStartedLongOp; // Flag that long operation was started
   BOOL mMovedPiezo;    // Flag that a piezo movement was started
+  BOOL mMovedAperture; // Flag that an aperture/phase plate movement was started
   BOOL mLoadingMap;    // Flag that an asynchronous map load was started
   BOOL mMakingDualMap; // Flag that anchor map has been started
   double mDoseStart;   // Starting cumulative dose
